[package]
name = "embassy-stm32f4-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Embassy example for nano-ros on STM32F4"

[[bin]]
name = "embassy-stm32f4-example"
path = "src/main.rs"

[dependencies]
# Embassy runtime
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4", features = ["tick-hz-1_000"] }
embassy-stm32 = { version = "0.2", features = ["stm32f429zi", "time-driver-any", "memory-x"] }
embassy-sync = "0.6"

# Cortex-M runtime
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"

# nano-ros core crates (no zenoh - this is a demo of the Embassy pattern)
# For actual nano-ros usage, you would add zenoh-pico via C shim (see zephyr examples)
nano-ros-core = { path = "../../crates/nano-ros-core", default-features = false }
nano-ros-serdes = { path = "../../crates/nano-ros-serdes", default-features = false }

# Logging (optional, for debugging)
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Heapless collections
heapless = "0.8"

# Static cell for shared state
static_cell = "2"

[features]
default = ["defmt"]
defmt = []

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
opt-level = 1
