[package]
name = "native-listener"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "listener"
path = "src/main.rs"

[features]
default = []
zenoh = ["nano-ros/zenoh"]

[dependencies]
nano-ros = { path = "../../crates/nano-ros", default-features = false, features = ["std"] }
log = { workspace = true }
env_logger = { workspace = true }
