[package]
name = "native-rs-action-server"
version = "0.1.0"
edition = "2021"
description = "Example ROS 2 action server using nano-ros"

[features]
default = ["zenoh"]
zenoh = [
    "nano-ros/zenoh",
]

[dependencies]
nano-ros = { path = "../../crates/nano-ros", default-features = false, features = ["std"] }
example_interfaces = { version = "*", default-features = false }
heapless = "0.8"
log = "0.4"
env_logger = "0.10"
