<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>native_action_server</name>
  <version>0.1.0</version>
  <description>nano-ros native action server example</description>
  <maintainer email="example@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
