[package]
name = "native-rs-listener"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "listener"
path = "src/main.rs"

[features]
default = []
zenoh = ["nano-ros/zenoh"]

[dependencies]
nano-ros = { path = "../../crates/nano-ros", default-features = false, features = ["std"] }
std_msgs = { version = "*", default-features = false }
log = "0.4"
env_logger = "0.11"
