[package]
name = "native-service-client"
version = "0.1.0"
edition = "2021"
description = "Example ROS 2 service client using nano-ros"

[features]
default = ["zenoh"]
zenoh = [
    "nano-ros/zenoh",
]

[dependencies]
nano-ros = { path = "../../crates/nano-ros", default-features = false, features = ["std"] }
example_interfaces = { version = "*", default-features = false }
log = "0.4"
env_logger = "0.10"
