[package]
name = "native-talker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "talker"
path = "src/main.rs"

[features]
default = []
zenoh = ["nano-ros-node/zenoh", "nano-ros-node/std"]

[dependencies]
nano-ros-core = { workspace = true }
nano-ros-node = { workspace = true }
nano-ros-types = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
