[package]
name = "native-talker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "talker"
path = "src/main.rs"

[features]
default = []
zenoh = ["nano-ros/zenoh"]

[dependencies]
nano-ros = { path = "../../crates/nano-ros", default-features = false, features = ["std"] }
log = { workspace = true }
env_logger = { workspace = true }
