<?xml version="1.0"?>
<package format="3">
  <name>qemu_test</name>
  <version>0.1.0</version>
  <description>QEMU test binary for nano-ros on Cortex-M3</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>MIT OR Apache-2.0</license>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
